# showAndTell-Interspeech2024

./: .gitignore  README.md  pyproject.toml  requirements.txt
flaskr/: __init__.py  audioRecording.py  autocorrelationVwlExtract.py  coordinates.py  db.py  main.py  navigationAndCalibration.py  practice.py  signalProcessing.py  tutorial.py
flaskr/myenv/: pyvenv.cfg
flaskr/plugin_VocalToolkit/: addnoise.praat  breathiness.praat  butterworth.praat  buttons.praat  calculateformantsvt.praat  calculatevtl.praat  changeduration.praat  changeformants.praat  changenote.praat  changepitchmedian.praat  changesemitones.praat  changespeed.praat  changevt.praat  changevtpitchduration.praat  combinedprocesses.praat  compressor.praat  copydtw.praat  copyduration.praat  copyformants.praat  copyintensityaveragedb.praat  copymix.praat  copypitchmedian.praat  copyvt.praat  copyvtpitchduration.praat  createvowel.praat  createwaveform.praat  cutpauses.praat  declick.praat  distortion.praat  echo.praat  eq10bands.praat  eqpreset.praat  extractFirstvowel.praat  extractvowels.praat  extractvowelsNoViewAndEdit.praat  fade.praat  gate.praat  hiss.praat  limiter.praat  marksyllables.praat  (+12 more)
flaskr/static/: boostAudio.py  boostAudio.sh
flaskr/static/audio/: backHigh.json  backLow.json  frontHigh.json  frontLow.json
flaskr/static/css/: calibration.css  practice.css  style.css  tutorial.css
flaskr/templates/: base.html
scripts/: setup.sh
tests/: conftest.py  test_autocorrelationVwlExtract.py  test_coordinates.py  test_factory.py  test_main.py  test_signalProcessing.py
(+50 files in other folders)
