[project]
name = "flaskr"
version = "1.0.0"
authors = [
  { name="Charlotte Yoder", email="yoder6@illinois.edu" },
    { name="Shreyansh Agrawal", email="sa91@illinois.edu" },
]
description = "Vowel Chart visualization for Interspeech Show and Tell 2024"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["flaskr"]